--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=taskallocation
 server.port=8200
 
+
+spring.messages.basename=properties/ApplicationResources
+
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.jsp
+
 spring.datasource.url=jdbc:mysql://localhost:3306/taskallocationdb
 spring.datasource.username=root
 spring.datasource.password=root
@@ -8,3 +14,15 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.username =skytestcampaigns@gmail.com
+spring.mail.password =skytest123
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.connectiontimeout = 5000
+spring.mail.properties.mail.smtp.timeout = 5000
+spring.mail.properties.mail.smtp.writetimeout = 5000
