--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,11 @@ spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
 spring.mail.properties.mail.smtp.timeout = 5000
 spring.mail.properties.mail.smtp.writetimeout = 5000
+
+fileupload.folder=D:\\temp\\
+
+spring.jpa.properties.hibernate.jdbc.batch_size=10
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
